--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../../osa2/notes/ && npm run build --prod && cp -r build ../../osa3/backend/",
+    "test": "jest --verbose",
+    "build:ui": "rm -rf build && cd ../../tahanomaosoite && npm run build --prod && cp -r build ../../tahanomaosoite",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail",
@@ -19,11 +19,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.14",
     "mongoose": "^5.6.4"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
     "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
