--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "Roni V",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.14",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
