--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
   "author": "Roni V",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.14",
-    "mongoose": "^5.6.4",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.1",
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "eslint": "^6.0.1",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^24.8.0",
-    "nodemon": "^1.19.1",
+    "bcrypt": "^3.0.0",
+    "cross-env": "^5.2.1",
+    "eslint": "^6.4.0",
+    "eslint-plugin-react": "^7.14.3",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
     "supertest": "^4.0.2"
   },
   "jest": {
